tests/snapshots/purity_parity/purity_parity__A__33_module_qualified_effect_propagation_missing.snap
---
source: tests/purity_vm_jit_parity_snapshots.rs
---
Fixture: examples/type_system/failing/33_module_qualified_effect_propagation_missing.flx
Category: A
Strict: false
Expect compile error: true

== vm command ==
$ flux --no-cache --no-strict --root examples/type_system examples/type_system/failing/33_module_qualified_effect_propagation_missing.flx
exit_code: 1

== jit command ==
$ flux --no-cache --no-strict --root examples/type_system examples/type_system/failing/33_module_qualified_effect_propagation_missing.flx --jit
exit_code: 1

== vm tuples ==
- E400 | Missing Ambient Effect | effectful call occurs here

== jit tuples ==
- E400 | Missing Ambient Effect | effectful call occurs here

== parity ==
match

== mismatch_debug ==
<none>
